Fcurve group disappear on Curve object data #68665

Closed
opened 2019-08-15 01:18:42 +02:00 by Damien Picard · 5 comments
Member

System Information
Operating system: Ubuntu 18.10
Graphics card: Nvidia GeForce GTX 660M

Blender Version
Broken: 2.81 (5489611e53); at least as far back as 2.79

Short description of error
When trying to add keyframes to Curve object data (such as control point location), using an fcurve group, the group is created, but then deleted on switching to Edit Mode. This also happens for Surfaces, but not for other object types.

Exact steps for others to reproduce the error

  • From startup file, Add → Curve → Bézier
  • In text editor, execute this script:
import bpy

bpy.context.object.data.splines[0].bezier_points[0].keyframe_insert("co", group="My group")
  • The newly created fcurve is in the group.
    image.png
  • Switch to Edit Mode, then back to Object Mode
  • The fcurves still exist, but the group has disappeared.
    image.png
**System Information** Operating system: Ubuntu 18.10 Graphics card: Nvidia GeForce GTX 660M **Blender Version** Broken: 2.81 (5489611e5317); at least as far back as 2.79 **Short description of error** When trying to add keyframes to Curve object data (such as control point location), using an fcurve group, the group is created, but then deleted on switching to Edit Mode. This also happens for Surfaces, but not for other object types. **Exact steps for others to reproduce the error** * From startup file, Add → Curve → Bézier * In text editor, execute this script: ``` import bpy bpy.context.object.data.splines[0].bezier_points[0].keyframe_insert("co", group="My group") ``` * The newly created fcurve is in the group. ![image.png](https://archive.blender.org/developer/F7665127/image.png) * Switch to Edit Mode, then back to Object Mode * The fcurves still exist, but the group has disappeared. ![image.png](https://archive.blender.org/developer/F7665129/image.png)
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

Can confirm.
Sybren A. Stüvel self-assigned this 2019-12-17 11:01:03 +01:00

This issue was referenced by 7830ea29c2

This issue was referenced by 7830ea29c2ea6c30cec1dcd6d6c11a1f228e9cd7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68665
No description provided.